--- a/style/styles.css
+++ b/style/styles.css
@@ -37,6 +37,13 @@
     font-size: 18px;
     color: #757575;
 }
+.text-center{
+    text-align: center;
+}
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
 
 
 
@@ -119,4 +126,17 @@ main{
 }
 .item-description{
     font-weight: 600;
+}
+
+
+
+/* skills section start */
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, .6);
 }
