--- a/style/styles.css
+++ b/style/styles.css
@@ -140,3 +140,41 @@ main{
     border-radius: 5px;
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, .6);
 }
+
+
+
+/* resume-container start */
+.resume-container{
+    display: flex;
+    gap: 24px;
+}
+.experience-description, .experience-sub-title{
+    color: rgb(117, 117, 117);
+}
+.experience-sub-title{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.experience-title{
+    color: rgb(71, 71, 71);
+    font-weight: 700;
+    font-size: 25px;
+}
+.resume-column-title{
+    color: rgb(71, 71, 71);
+    font-size: 30px;
+    font-weight: 700;
+}
+.section-title{
+    text-align: center;
+    color: rgb(24, 24, 24);
+    font-size: 35px;
+    font-weight: 700;
+}
+.resume hr{
+    margin: 30px 5px;
+}
+.resume-download-cv{
+    margin-top: 50px;
+}
