--- a/style/styles.css
+++ b/style/styles.css
@@ -167,7 +167,6 @@ main{
     font-weight: 700;
 }
 .section-title{
-    text-align: center;
     color: rgb(24, 24, 24);
     font-size: 35px;
     font-weight: 700;
@@ -177,4 +176,26 @@ main{
 }
 .resume-download-cv{
     margin-top: 50px;
+}
+
+
+
+/* Footer style */
+footer{
+    padding: 130px 230px;
+    display: flex;
+    gap: 100px;
+}
+.footer-column{
+    width: 50%;
+}
+footer input[type="text"], footer input[type="email"], footer textarea{
+    height: 46px;
+    border-radius: 5px;
+    background-color: white;
+    display: block;
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    border: none;
 }
