--- a/style/styles.css
+++ b/style/styles.css
@@ -199,3 +199,20 @@ footer input[type="text"], footer input[type="email"], footer textarea{
     margin-bottom: 24px;
     border: none;
 }
+.hide{
+    display: none;
+}
+@media screen and (max-width:576px) {
+    .skills-container, .resume-container, footer{
+        flex-direction: column;
+    }
+    footer{
+        padding: 20px;
+    }
+    .footer-column{
+        width: 100%;
+    }
+    footer input[type="text"], footer input[type="email"], footer textarea{
+        width: calc(100% - 40px);
+    }
+}
